assets/css/comment.css
.comments {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 15px 0px 0px 0px;
    /* justify-content: flex-start;
    column-gap: 15px;
    row-gap: 15px; 
    flex-wrap: wrap; */
}

.comment {
    flex-basis: 32.333%;
}

.comment__body {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 20px;
    padding: 28px 32px;
}

.comment__header {}

.comment__stars {}

.comment__content {}

.comment__user {
    display: flex;
    align-items: center;
    column-gap: 8px;
    color: #000;
    font-weight: 700;
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: 0%;
    margin-bottom: 12px;
}

.comment__text {
    color: rgba(0, 0, 0, 0.6);
    font-weight: 400;
    font-size: 16px;
    line-height: 1.2;
    letter-spacing: 0%;
}

